TP1/unicorn/unicorn-front-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn-front-deployment
  labels:
    app: unicorn-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: unicorn-front
  template:
    metadata:
      labels:
        app: unicorn-front
    spec:
      containers:
        - name: unicorn-front
          image: public.ecr.aws/l3x6e3t5/takima-training/nginx:1.7.9
          ports:
            - containerPort: 80
